--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-<!-- Starter template: https://getbootstrap.com/docs/5.0/getting-started/introduction/#starter-template -->
 <!doctype html>
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-  <!-- Bootstrap Icon use CDN (Content Delivery Network[harus online]): https://icons.getbootstrap.com/?q=email -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
   <link rel="stylesheet" href="style.css">
-
   <title>My portfolio</title>
 </head>
 
@@ -48,19 +40,16 @@
       </div>
     </div>
   </nav>
-
   <section class="jumbotron text-center">
     <img src="img/profil.jpeg" alt="profil" width="200" class="rounded-circle img-thumbnail">
     <h1 class="display-4">ムハマド・ファズリ・マウラナ</h1>
     <p class="lead">Front-End Development | Client-Side Development</p>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#FFFF4D" fill-opacity="1"
         d="M0,128L48,106.7C96,85,192,43,288,53.3C384,64,480,128,576,160C672,192,768,192,864,165.3C960,139,1056,85,1152,69.3C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
     </svg>
   </section>
-
   <section id="about">
     <div class="container">
       <div class="row text-center mb-3">
@@ -68,7 +57,6 @@
           <h2>About Me</h2>
         </div>
       </div>
-
       <div class="row justify-content-center fs-5 text-center">
         <div class="col-md-4">
           <p>
@@ -83,16 +71,13 @@
           </p>
         </div>
       </div>
-
     </div>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#1E90FF" fill-opacity="1"
         d="M0,256L48,234.7C96,213,192,171,288,170.7C384,171,480,213,576,197.3C672,181,768,107,864,101.3C960,96,1056,160,1152,181.3C1248,203,1344,181,1392,170.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
       </path>
     </svg>
   </section>
-
   <section id="project">
     <div class="container">
       <div class="row text-center mb-3">
@@ -100,62 +85,65 @@
           <h2>My Projects</h2>
         </div>
       </div>
-
       <div class="row justify-content-center">
         <div class="col-md-4 mb-3">
           <div class="card" style="background-color: salmon;">
             <img src="img/img1.png" class="card-img-top" alt="project1">
             <div class="card-body">
-              <p class="card-text">Bagian Navbar Brand dan Thumbnail. Silakan jelajahi <a href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan menghubungi saya.</p>
+              <p class="card-text">Bagian Navbar Brand dan Thumbnail. Silakan jelajahi <a
+                  href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan
+                menghubungi saya.</p>
             </div>
           </div>
         </div>
-
         <div class="col-md-4 mb-3">
           <div class="card" style="background-color: salmon;">
             <img src="img/img2.png" class="card-img-top" alt="project2">
             <div class="card-body">
-              <p class="card-text">Bagian Navigation Menu About Us. Silakan jelajahi <a href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan menghubungi saya.</p>
+              <p class="card-text">Bagian Navigation Menu About Us. Silakan jelajahi <a
+                  href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan
+                menghubungi saya.</p>
             </div>
           </div>
         </div>
-
         <div class="col-md-4 mb-3">
           <div class="card" style="background-color: salmon;">
             <img src="img/img3.png" class="card-img-top" alt="project3">
             <div class="card-body">
-              <p class="card-text">Bagian Navigation Menu Services dan Clients. Silakan jelajahi <a href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan menghubungi saya.</p>
+              <p class="card-text">Bagian Navigation Menu Services dan Clients. Silakan jelajahi <a
+                  href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan
+                menghubungi saya.</p>
             </div>
           </div>
         </div>
+        <div class="col-md-4 mb-3">
           <div class="card" style="background-color: salmon;">
             <img src="img/img4.png" class="card-img-top" alt="project4">
             <div class="card-body">
-              <p class="card-text">Bagian Navigation Menu Portfolio. Silakan jelajahi <a href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan menghubungi saya.</p>
+              <p class="card-text">Bagian Navigation Menu Portfolio. Silakan jelajahi <a
+                  href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan
+                menghubungi saya.</p>
             </div>
           </div>
         </div>
-
         <div class="col-md-4 mb-3">
           <div class="card" style="background-color: salmon;">
             <img src="img/img5.png" class="card-img-top" alt="project5">
             <div class="card-body">
-              <p class="card-text">Bagian Navigation Menu Contact Us. Silakan jelajahi <a href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan menghubungi saya.</p>
+              <p class="card-text">Bagian Navigation Menu Contact Us. Silakan jelajahi <a
+                  href="https://user0001-git.github.io/" target="_blank">website saya</a> dan beri masukan dengan
+                menghubungi saya.</p>
             </div>
           </div>
         </div>
-
       </div>
-
     </div>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#0077BE" fill-opacity="1"
         d="M0,256L20,234.7C40,213,80,171,120,144C160,117,200,107,240,133.3C280,160,320,224,360,208C400,192,440,96,480,96C520,96,560,192,600,240C640,288,680,288,720,282.7C760,277,800,267,840,245.3C880,224,920,192,960,160C1000,128,1040,96,1080,112C1120,128,1160,192,1200,192C1240,192,1280,128,1320,112C1360,96,1400,128,1420,144L1440,160L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
       </path>
     </svg>
   </section>
-
   <section id="contact" style="background-color: #0077BE;">
     <div class="container">
       <div class="row text-center mb-3">
@@ -163,47 +151,74 @@
           <h2>Contact Me</h2>
         </div>
       </div>
-
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <form>
+          <div class="alert alert-warning alert-dismissible fade show d-none my-alert" role="alert">
+            <strong>Terima kasih telah menghubungi kami!</strong> Pesan Anda sudah kami terima.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="my-profile-contact-form">
             <div class="mb-3">
               <label for="name" class="form-label">Nama Lengkap</label>
-              <input type="text" class="form-control" id="name" aria-describedby="name">
-            </div>
 
+              <input type="text" class="form-control" id="name" aria-describedby="name" name="nama">
+            </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" aria-describedby="email">
+              <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
             </div>
-
             <div class="mb-3">
               <label for="pesan" class="form-label">Pesan</label>
-              <textarea class="form-control" id="pesan" rows="3"></textarea>
+              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
             </div>
-
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn btn-primary btn-kirim">Send</button>
+            <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
           </form>
         </div>
       </div>
-
     </div>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#198754" fill-opacity="1"
         d="M0,128L20,138.7C40,149,80,171,120,154.7C160,139,200,85,240,101.3C280,117,320,203,360,229.3C400,256,440,224,480,218.7C520,213,560,235,600,234.7C640,235,680,213,720,224C760,235,800,277,840,282.7C880,288,920,256,960,240C1000,224,1040,224,1080,218.7C1120,213,1160,203,1200,186.7C1240,171,1280,149,1320,138.7C1360,128,1400,128,1420,128L1440,128L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
       </path>
     </svg>
   </section>
-
   <footer class="bg-success text-white text-center pb-5">
-    <p>© 2025 ファズリ. Saat ini saya tersedia untuk proyek freelance dan kolaborasi. Jangan ragu untuk menghubungi saya di <i class="bi bi-envelope-at-fill text-warning"></i> muhamadfazrimaulana1@gmail.com atau <i class="bi bi-whatsapp"></i> +62-89519885528.</p>
+    <p>© 2025 ファズリ. Saat ini saya tersedia untuk proyek freelance dan kolaborasi. Jangan ragu untuk menghubungi saya di
+      <i class="bi bi-envelope-at-fill text-warning"></i> muhamadfazrimaulana1@gmail.com atau <i
+        class="bi bi-whatsapp"></i> +62-89519885528.</p>
   </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <script>
+    const scriptURL =
+      'https://script.google.com/macros/s/AKfycbz0aWRgcsqJKM5MjNoR4HnJ3AcVXVmUrCffSu8a7adT4pi9-9yBGyhlKLtSpinew8Yr/exec'
+    const form = document.forms['my-profile-contact-form']
+    const btnKirim = document.querySelector('.btn-kirim')
+    const btnLoading = document.querySelector('.btn-loading')
+    const myAlert = document.querySelector('.my-alert')
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      btnLoading.classList.toggle('d-none')
+      btnKirim.classList.toggle('d-none')
+      fetch(scriptURL, {
+          method: 'POST',
+          body: new FormData(form)
+        })
+        .then(response => {
+          btnLoading.classList.toggle('d-none');
+          btnKirim.classList.toggle('d-none');
+          myAlert.classList.toggle('d-none');
+          form.reset();
+          console.log('Success!', response);
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 
 </html>
